# src/router/user/user.service.ts
@@ -1,4 +1,7 @@
-import { userInventoryModel } from "./model/userInventory.schema";
+import {
+    UserInventory,
+    userInventoryModel,
+} from "./model/userInventory.schema";
 import { json } from "stream/consumers";
 import { userModel } from "./model/user.schema";
 import { Request, Response } from "express";
@@ -27,9 +30,212 @@ import { ResDto } from "../../common/dto/common.res.dto";
 import { ErrorDto } from "../../common/dto/error.res.dto";
 import { ERRCODE } from "../../common/constants/errorCode.constants";
 import { validateRequest } from "../../common/decorators/validate.decorator";
+import {
+    CartItem,
+    UserCartAddReqDto,
+    UserCartDeleteParam,
+} from "./dto/userCart.req.dto";
+import productRepository from "../../router/product/repository/product.repository";
 
 class UserService {
     constructor() {}
+
+    async getUserCarts(req: Request, res: Response): Promise<ResDto> {
+        const { user } = await this.getUserByHeader(req);
+        if (!user) {
+            return new ErrorDto(ERRCODE.E002);
+        }
+
+        const userInventory: UserInventory =
+            await userInventoryRepository.findById(user.inventory);
+
+        if (!userInventory.carts) {
+            userInventory.carts = [];
+        }
+        return new ResDto({
+            data: { carts: userInventory.carts },
+        });
+    }
+
+    @validateRequest
+    async addUserCart(req: Request, res: Response): Promise<ResDto> {
+        const { user } = await this.getUserByHeader(req);
+        if (!user) {
+            return new ErrorDto(ERRCODE.E002);
+        }
+
+        const reqDto: UserCartAddReqDto = new UserCartAddReqDto(req);
+        const userInventory: UserInventory =
+            await userInventoryRepository.findById(user.inventory);
+        if (!userInventory.carts) {
+            userInventory.carts = [];
+        }
+
+        const productEntities: Array<any> =
+            await productRepository.findProductByIdsForOrder(
+                reqDto.products.map((product) => product.productId)
+            );
+
+        for (const productRequest of reqDto.products) {
+            // 상품이 실제 존재하는 상품인지 확인
+            const productEntity = productEntities.find((entity) => {
+                if (productRequest.optionName) {
+                    return (
+                        entity._id.toString() ===
+                            productRequest.productId.toString() &&
+                        entity.options.find(
+                            (option: any) =>
+                                option.optName === productRequest.optionName
+                        )
+                    );
+                } else {
+                    return (
+                        entity._id.toString() ===
+                        productRequest.productId.toString()
+                    );
+                }
+            });
+
+            if (!productEntity) {
+                return new ErrorDto(ERRCODE.E013);
+            }
+
+            if (productRequest.optionName) {
+                // 옵션이 실제 상품에 없는 옵션인지 확인
+                const option = productEntity.options.find(
+                    (option: any) =>
+                        option.optName === productRequest.optionName
+                );
+
+                if (!option) {
+                    return new ErrorDto(ERRCODE.E014);
+                }
+            }
+
+            // 카트에 이미 존재하는 상품인지 확인
+            const productInCart = userInventory.carts!.find((inventoryCart) => {
+                // 카트와 요청 상품 id 비교
+                if (
+                    inventoryCart.productId.toString() ===
+                    productRequest.productId.toString()
+                ) {
+                    // 요청에 옵션이 포함되는 상품이면 옵션도 비교
+                    if (productRequest.optionName) {
+                        if (
+                            inventoryCart.optionName ===
+                            productRequest.optionName
+                        ) {
+                            return true;
+                        }
+                        // 옵션이 다르면 같은 상품이더라도 다른 아이템으로 인식
+                        return false;
+                    }
+
+                    if (inventoryCart.optionName) {
+                        // 카트에 옵션이 있으면서 요청에 옵션이 없으면 다른 아이템으로 인식
+                        return false;
+                    }
+                    // 옵션이 없으면서 같은 상품이면 같은 아이템으로 인식
+                    return true;
+                }
+                // 카트에 없는 경우
+                return false;
+            });
+
+            if (productInCart) {
+                // 이미 카트에 존재하는 상품이면 수량만 추가
+                productInCart.amount += productRequest.amount;
+            } else {
+                // 카트에 존재하지 않는 상품이면 새로 추가
+                userInventory.carts!.push({
+                    productId: productEntity._id,
+                    amount: productRequest.amount,
+                    optionName: productRequest.optionName,
+                    createAt: new Date(),
+                });
+            }
+        }
+        await userInventoryRepository.update(userInventory);
+
+        return new ResDto({
+            message: "add cart success",
+            data: { carts: userInventory.carts },
+        });
+    }
+
+    async clearUserCarts(req: Request, res: Response) {
+        const { user } = await this.getUserByHeader(req);
+        if (!user) {
+            return new ErrorDto(ERRCODE.E002);
+        }
+
+        const userInventory: UserInventory =
+            await userInventoryRepository.findById(user.inventory);
+
+        userInventory.carts = [];
+
+        await userInventoryRepository.update(userInventory);
+
+        return new ResDto({
+            message: "delete all carts success",
+            data: { carts: userInventory.carts },
+        });
+    }
+
+    @validateRequest
+    async deleteUserCart(req: Request, res: Response): Promise<ResDto> {
+        const { user } = await this.getUserByHeader(req);
+        if (!user) {
+            return new ErrorDto(ERRCODE.E002);
+        }
+
+        const productId: string = req.params.productId;
+        const param: UserCartDeleteParam = new UserCartDeleteParam(req);
+
+        const userInventory: UserInventory =
+            await userInventoryRepository.findById(user.inventory);
+
+        if (!userInventory.carts) {
+            userInventory.carts = [];
+        }
+
+        const targetProduct = userInventory.carts.find((cart) => {
+            if (param.optionName) {
+                return (
+                    cart.productId.toString() === productId &&
+                    cart.optionName === param.optionName
+                );
+            } else if (cart.optionName) {
+                return false;
+            }
+            return cart.productId.toString() === productId;
+        });
+
+        if (!targetProduct) {
+            // todo: 에러 코드 추가
+            return new ErrorDto(ERRCODE.E015);
+        }
+
+        if (param.amount) {
+            targetProduct.amount -= param.amount;
+            if (targetProduct.amount <= 0) {
+                userInventory.carts = userInventory.carts.filter(
+                    (cart) => cart !== targetProduct
+                );
+            }
+        } else {
+            userInventory.carts = userInventory.carts.filter(
+                (cart) => cart !== targetProduct
+            );
+        }
+
+        await userInventoryRepository.update(userInventory);
+
+        return new ResDto({
+            message: "delete success",
+            data: { carts: userInventory.carts },
+        });
+    }
 
     @validateRequest
     async deleteUserAddress(req: Request, res: Response): Promise<ResDto> {
@@ -436,6 +642,14 @@ class UserService {
     // 비밀번호 일치 비교
     comparePassword(rawPassword: string, hashedPassword: string) {
         return bcrypt.compareSync(rawPassword, hashedPassword);
+    }
+
+    async getUserByHeader(
+        req: Request
+    ): Promise<{ user: any; loginId: string }> {
+        const loginId = req.headers["X-Request-user-id"] as string;
+        const user = await userRepository.findByLoginIdAndDeleteAtNull(loginId);
+        return { user, loginId };
     }
 }
 
