# swagger/paths/users/users.yml
@@ -785,3 +785,249 @@
                                 code:
                                     type: string
                                     example: "E009"
+/api/v1/users/carts:
+    get:
+        tags:
+            - Users
+        summary: "장바구니 목록 조회"
+        description: "사용자의 장바구니 목록을 조회합니다. <br> 장바구니에 상품이 없는 경우 빈 배열을 반환합니다. <br> 상품에 옵션이 있는 경우 다른 요소로 취급합니다."
+        parameters:
+            - in: header
+              name: Authorization
+              required: true
+              schema:
+                  type: string
+              description: "Bearer jwt_token"
+        responses:
+            200:
+                description: "장바구니 조회 성공"
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                message:
+                                    type: string
+                                    example: "success"
+                                carts:
+                                    type: array
+                                    items:
+                                        type: object
+                                        properties:
+                                            productId:
+                                                type: string
+                                                description: "상품 ID"
+                                            amount:
+                                                type: integer
+                                                description: "수량"
+                                                minimum: 1
+                                            createAt:
+                                                type: string
+                                                description: "장바구니 추가 시간"
+                                            optionName:
+                                                type: string
+                                                description: "상품 옵션명"
+            401:
+                description: "인증 실패"
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                message:
+                                    type: string
+                                    example: "Unauthorized"
+                                code:
+                                    type: string
+                                    example: "E009"
+    post:
+        tags:
+            - Users
+        summary: "장바구니에 상품 추가"
+        description: "장바구니에 상품을 추가합니다. <br>이미 있는 상품은 수량이 증가합니다.<br> 상품에 옵션이 있는 경우 다른 요소로 취급합니다."
+        parameters:
+            - in: header
+              name: Authorization
+              required: true
+              schema:
+                  type: string
+              description: "Bearer jwt_token"
+        requestBody:
+            required: true
+            content:
+                application/json:
+                    schema:
+                        type: object
+                        properties:
+                            products:
+                                type: array
+                                items:
+                                    type: object
+                                    required:
+                                        - productId
+                                        - amount
+                                    properties:
+                                        productId:
+                                            type: string
+                                            description: "상품 ID"
+                                        amount:
+                                            type: integer
+                                            description: "수량"
+                                            minimum: 1
+                                        optionName:
+                                            type: string
+                                            description: "상품 옵션명"
+        responses:
+            200:
+                description: "장바구니 추가 성공"
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                message:
+                                    type: string
+                                    example: "add cart success"
+                                carts:
+                                    type: array
+                                    items:
+                                        type: object
+                                        properties:
+                                            productId:
+                                                type: string
+                                                description: "상품 ID"
+                                            amount:
+                                                type: integer
+                                                description: "수량"
+                                            createAt:
+                                                type: string
+                                                description: "장바구니 추가 시간"
+                                            optionName:
+                                                type: string
+                                                description: "상품 옵션명"
+            400:
+                description: "상품 추가 실패"
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                message:
+                                    type: string
+                                    example: "장바구니 추가 요청에 필요한 상품 목록 중 상품이 존재하지 않습니다. | 장바구니 추가 요청에 필요한 상품 목록 중 상품의 옵션이 존재하지 않습니다."
+                                code:
+                                    type: string
+                                    example: "E013 | E014"
+    delete:
+        tags:
+            - Users
+        summary: "장바구니 전체 비우기"
+        description: "장바구니의 모든 상품을 삭제합니다."
+        parameters:
+            - in: header
+              name: Authorization
+              required: true
+              schema:
+                  type: string
+              description: "Bearer jwt_token"
+        responses:
+            200:
+                description: "장바구니 비우기 성공"
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                message:
+                                    type: string
+                                    example: "delete all carts success"
+                                data:
+                                    type: object
+                                    properties:
+                                        carts:
+                                            type: array
+                                            items: {}
+                                            example: []
+
+/api/v1/users/carts/:productId:
+    delete:
+        tags:
+            - Users
+        summary: "장바구니 특정 상품 삭제"
+        description: "장바구니에서 특정 상품을 삭제합니다. <br>amount 지정 시 해당 수량만큼만 감소 <br>optionName 지정 시 해당 상품과 옵션이 일치하는 상품 요소만 삭제 <br>exam) /api/v1/users/carts/1234123412341234?amount=2&optionName=레드 => 1234123412341234 레드 옵션 상품 2개 삭제<br>exam) /api/v1/users/carts/1234123412341234?amount=2 => 1234123412341234 상품 2개 삭제"
+        parameters:
+            - in: header
+              name: Authorization
+              required: true
+              schema:
+                  type: string
+              description: "Bearer jwt_token"
+            - in: path
+              name: productId
+              required: true
+              schema:
+                  type: string
+              description: "삭제할 상품 ID"
+            - in: query
+              name: amount
+              required: false
+              schema:
+                  type: integer
+                  minimum: 1
+              description: "삭제할 수량 (미지정시 전체 삭제)"
+            - in: query
+              name: optionName
+              required: false
+              schema:
+                  type: string
+              description: "삭제할 상품의 옵션명"
+        responses:
+            200:
+                description: "상품 삭제 성공"
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                message:
+                                    type: string
+                                    example: "delete success"
+                                carts:
+                                    type: array
+                                    items:
+                                        type: object
+                                        properties:
+                                            productId:
+                                                type: string
+                                            amount:
+                                                type: integer
+                                            createAt:
+                                                type: string
+                                            optionName:
+                                                type: string
+            401:
+                description: "인증 실패"
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                message:
+                                    type: string
+                                    example: "Unauthorized"
+                                code:
+                                    type: string
+                                    example: "E009"
+            404:
+                description: "상품을 찾을 수 없음"
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                message:
+                                    type: string
+                                    example: "장바구니 삭제 요청에 대한 상품이 존재하지 않습니다."
+                                code:
+                                    type: string
+                                    example: "E015"
